--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/butterfly.svg" or "butterfly.svg", "%PUBLIC_URL%/butterfly.svg" will
+      Unlike "/logo.svg" or "logo.svg", "%PUBLIC_URL%/logo.svg" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
