--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
+  <link rel="icon" href="%PUBLIC_URL%/assets/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#f8f9fa" />
   <meta name="description" content="Web site created using create-react-app" />
