--- a/public/index.html
+++ b/public/index.html
@@ -3,41 +3,35 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/assets/logo.svg" />
+  <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#f8f9fa" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+  <meta name="theme-color" content="#0d0716" />
+  <meta name="description" content="Rafsan Ahmed – Portfolio, Projects, and Experience in Data Analytics and Tech." />
+  <meta name="keywords" content="Rafsan Ahmed, Data Analytics, Portfolio, Projects, Tech, Python, SQL, Tableau" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/logo.svg" or "logo.svg", "%PUBLIC_URL%/logo.svg" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+  <!-- Open Graph -->
+  <meta property="og:title" content="Rafsan Ahmed" />
+  <meta property="og:description" content="Portfolio and projects in data analytics and tech." />
+  <meta property="og:image" content="%PUBLIC_URL%/logo.svg" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://rafsanahmed.com/" />
+
+  <!-- Google Analytics tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-E1XPQY97P2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-E1XPQY97P2');
+  </script>
   <title>Rafsan Ahmed</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
 </body>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=NTR&display=swap');
