UPDATE New Projects Section

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,9 @@
   <div id="root"></div>
 </body>
 <style>
+  @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap");
   @import url('https://fonts.googleapis.com/css2?family=NTR&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;700&display=swap');
 </style>
 
 </html>
