--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,13 @@
   @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap");
   @import url('https://fonts.googleapis.com/css2?family=NTR&display=swap');
   @import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;700&display=swap');
+
+  body {
+    background-color: #060a17;
+    margin: 0;
+    padding: 0;
+    color: #fff;
+  }
 </style>
 
 </html>
