UPDATE index and images

--- a/public/index.html
+++ b/public/index.html
@@ -3,22 +3,20 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
+  <link rel="icon" href="%PUBLIC_URL%/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#0d0716" />
+  <meta name="theme-color" content="#060a17" />
   <meta name="description" content="Rafsan Ahmed – Portfolio, Projects, and Experience in Data Analytics and Tech." />
   <meta name="keywords" content="Rafsan Ahmed, Data Analytics, Portfolio, Projects, Tech, Python, SQL, Tableau" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <!-- Open Graph -->
   <meta property="og:title" content="Rafsan Ahmed" />
-  <meta property="og:description" content="Portfolio and projects in data analytics and tech." />
-  <meta property="og:image" content="%PUBLIC_URL%/logo.svg" />
+  <meta property="og:description" content="I'm Rafsan, a Data Analyst with a love for design. I also build stuff for fun sometimes." />
+  <meta property="og:image" content="https://rafsanahmed.com/logo.png" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://rafsanahmed.com/" />
 
-  <!-- Google Analytics tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-E1XPQY97P2"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -27,16 +25,8 @@
     gtag('config', 'G-E1XPQY97P2');
   </script>
   <title>Rafsan Ahmed</title>
-</head>
-
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-</body>
-<style>
-  @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap");
+  <style>
   @import url('https://fonts.googleapis.com/css2?family=NTR&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;700&display=swap');
 
   body {
     background-color: #060a17;
@@ -44,6 +34,12 @@
     padding: 0;
     color: #fff;
   }
-</style>
 
+  </style>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
 </html>
