--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
   <meta property="og:title" content="Rafsan Ahmed" />
   <meta property="og:description" content="I'm Rafsan, a Data Analyst with a love for design. I also build stuff for fun sometimes." />
-  <meta property="og:image" content="https://rafsanahmed.com/share-image.jpg" />
+  <meta property="og:image" content="https://rafsanahmed.com/share-img.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:image:alt" content="Rafsan Ahmed - Data Analyst Portfolio" />
