--- a/public/index.html
+++ b/public/index.html
@@ -1,48 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/logo.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#060a17" />
-  <meta name="description" content="Rafsan Ahmed – Portfolio, Projects, and Experience in Data Analytics and Tech." />
-  <meta name="keywords" content="Rafsan Ahmed, Data Analytics, Portfolio, Projects, Tech, Python, SQL, Tableau" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#060a17" />
+    <meta name="description" content="Rafsan Ahmed – Portfolio, Projects, and Experience in Data Analytics and Tech." />
+    <meta name="keywords" content="Rafsan Ahmed, Data Analytics, Portfolio, Projects, Tech, Python, SQL, Tableau" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <meta property="og:title" content="Rafsan Ahmed" />
-  <meta property="og:description" content="I'm Rafsan, a Data Analyst with a love for design. I also build stuff for fun sometimes." />
-  <meta property="og:image" content="https://rafsanahmed.com/share-img.jpg" />
-  <meta property="og:image:width" content="1200" />
-  <meta property="og:image:height" content="630" />
-  <meta property="og:image:alt" content="Rafsan Ahmed - Data Analyst Portfolio" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://rafsanahmed.com/" />
+    <meta property="og:title" content="Rafsan Ahmed" />
+    <meta property="og:description" content="Hi, I'm Rafsan, I analyze data and create insightful visualizations. I also build stuff for fun sometimes." />
+    <meta property="og:image" content="https://rafsanahmed.com/share-img.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Rafsan Ahmed - Data Analyst Portfolio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://rafsanahmed.com/" />
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-E1XPQY97P2"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-E1XPQY97P2');
-  </script>
-  <title>Rafsan Ahmed</title>
-  <style>
-  @import url('https://fonts.googleapis.com/css2?family=NTR&display=swap');
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E1XPQY97P2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-E1XPQY97P2');
+    </script>
+    <title>Rafsan Ahmed</title>
+  </head>
 
-  body {
-    background-color: #060a17;
-    margin: 0;
-    padding: 0;
-    color: #fff;
-  }
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=NTR&display=swap');
 
-  </style>
-</head>
-
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-</body>
+      body {
+        background-color: #03141a;
+        margin: 0;
+        padding: 0;
+        color: #fff;
+      }
+    </style>
+  </body>
 </html>
