Font Import Fixed

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <div id="root"></div>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=NTR&display=swap');
-
+      @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap");
       body {
         background-color: #03141a;
         margin: 0;
