--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#060a17" />
     <meta name="description" content="Rafsan Ahmed – Portfolio, Projects, and Experience in Data Analytics and Tech." />
