Button behavior fixes

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,19 @@
       gtag('config', 'G-E1XPQY97P2');
     </script>
     <title>Rafsan Ahmed</title>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Rafsan Ahmed",
+        "url": "https://rafsanahmed.com",
+        "image": "https://rafsanahmed.com/assets/logo.png",
+        "jobTitle": "Data Analyst",
+        "description": "Data Analyst specializing in SQL, Python, and Tableau visualizations"
+      }
+    </script>
+    
   </head>
 
   <body>
