Performance Issues Minor Fix #2

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,16 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#060a17" />
     <meta name="description" content="Rafsan Ahmed – Portfolio, Projects, and Experience in Data Analytics and Tech." />
     <meta name="keywords" content="Rafsan Ahmed, Data Analytics, Portfolio, Projects, Tech, Python, SQL, Tableau" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=NTR&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
 
     <meta property="og:title" content="Rafsan Ahmed" />
     <meta property="og:description" content="Hi, I'm Rafsan, I analyze data and create insightful visualizations. I also build stuff for fun sometimes." />
@@ -28,18 +32,6 @@
       gtag('config', 'G-E1XPQY97P2');
     </script>
     <title>Rafsan Ahmed</title>
-
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "Person",
-        "name": "Rafsan Ahmed",
-        "url": "https://rafsanahmed.com",
-        "image": "https://rafsanahmed.com/assets/logo.png",
-        "jobTitle": "Data Analyst",
-        "description": "Data Analyst specializing in SQL, Python, and Tableau visualizations"
-      }
-    </script>
     
   </head>
 
@@ -47,8 +39,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=NTR&display=swap');
-      @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap");
+     
       body {
         background-color: #03141a;
         margin: 0;
