Updated Resume and Job Desc

--- a/public/index.html
+++ b/public/index.html
@@ -39,9 +39,8 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <style>
-     
       body {
-        background-color: #03141a;
+        background: var(--bg-gradient);
         margin: 0;
         padding: 0;
         color: #fff;
