Add complete sai-siddartha portfolio

--- a/public/index.html
+++ b/public/index.html
@@ -1,38 +1,65 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="%PUBLIC_URL%/favicon.ico"
+      type="image/x-icon"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#060a17" />
-    <meta name="description" content="Rafsan Ahmed – Portfolio, Projects, and Experience in Data Analytics and Tech." />
-    <meta name="keywords" content="Rafsan Ahmed, Data Analytics, Portfolio, Projects, Tech, Python, SQL, Tableau" />
+    <meta
+      name="description"
+      content="Sai Siddartha – Portfolio, Projects, and Experience in Data Analytics and Tech."
+    />
+    <meta
+      name="keywords"
+      content="Sai Siddartha, Data Analytics, Portfolio, Projects, Tech, Python, SQL, Excel, Power BI, Data Visualization, Data Analysis, Data Science"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=NTR&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=NTR&family=JetBrains+Mono:wght@400;700&display=swap"
+      rel="stylesheet"
+      media="print"
+      onload="this.media='all'"
+    />
 
-    <meta property="og:title" content="Rafsan Ahmed" />
-    <meta property="og:description" content="Hi, I'm Rafsan, I analyze data and create insightful visualizations. I also build stuff for fun sometimes." />
-    <meta property="og:image" content="https://rafsanahmed.com/share-img.jpg" />
+    <meta property="og:title" content="Sai Siddartha" />
+    <meta
+      property="og:description"
+      content="Hi, I'm Sai Siddartha, I analyze data and create insightful visualizations. I also build stuff for fun sometimes."
+    />
+    <meta
+      property="og:image"
+      content="https://saisiddartha.com/share-img.jpg"
+    />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="Rafsan Ahmed - Data Analyst Portfolio" />
+    <meta
+      property="og:image:alt"
+      content="Sai Siddartha - Data Analyst Portfolio"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://rafsanahmed.com/" />
+    <meta property="og:url" content="https://saisiddartha.com/" />
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E1XPQY97P2"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-E1XPQY97P2"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-E1XPQY97P2');
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-E1XPQY97P2");
     </script>
-    <title>Rafsan Ahmed</title>
-    
+    <title>Sai Siddartha</title>
   </head>
 
   <body>
